networking/traefik-ingress/basic-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: default
spec:
  basicAuth:
    # References the Secret defined in networking/basic-auth/traefik-auth-secret.yaml
    secret: traefik-auth-secret
    removeHeader: true
