networking/traefik-ingress/corsheader-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: corsheader
spec:
  headers:
    accessControlAllowMethods:
    - "*"
    accessControlAllowOriginList:
    - "*"
    accessControlAllowHeaders:
    - "*"
    accessControlAllowCredentials: true
    accessControlMaxAge: 100
    addVaryHeader: true
