networking/traefik-ingress/no-buffering-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: no-buffering
spec:
  headers:
    customResponseHeaders:
      X-Accel-Buffering: "no"
      Cache-Control: "no-cache"
      Connection: Upgrade
      Upgrade: websocket
