networking/traefik-ingress/path-based-routing-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: path-based-routing
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/guacamole`)
      kind: Rule
      services:
        - name: guacamole
          port: 80
      middlewares:
        - name: basic-auth
    - match: Host(`code.example.com`)
      kind: Rule
      services:
        - name: code-server
          port: 80
      middlewares:
        - name: basic-auth
    - match: Host(`fri.example.com`)
      kind: Rule
      services:
        - name: frigate
          port: 80
      middlewares:
        - name: basic-auth
    - match: PathPrefix(`/series`)
      kind: Rule
      services:
        - name: sonarr
          port: 80
      middlewares:
        - name: basic-auth
    - match: PathPrefix(`/movies`)
      kind: Rule
      services:
        - name: radarr
          port: 80
      middlewares:
        - name: basic-auth
    - match: PathPrefix(`/music`)
      kind: Rule
      services:
        - name: lidarr
          port: 80
      middlewares:
        - name: basic-auth
    - match: PathPrefix(`/bazarr`)
      kind: Rule
      services:
        - name: bazarr
          port: 80
      middlewares:
        - name: basic-auth
    - match: PathPrefix(`/jellyfin`)
      kind: Rule
      services:
        - name: jellyfin
          port: 80
    - match: PathPrefix(`/prowlarr`)
      kind: Rule
      services:
        - name: prowlarr
          port: 80
    - match: Host(`files.example.com`) && PathPrefix(`/files`)
      kind: Rule
      services:
        - name: fileserver
          port: 80
      middlewares:
        - name: basic-auth
    - match: Host(`files.example.com`)
      kind: Rule
      services:
        - name: fileserver
          port: 80
    - match: Host(`wp.example.com`)
      kind: Rule
      services:
        - name: n8n-svc
          port: 80
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: homepage
          port: 80
